Make sure content is aligned properly next to image

--- a/src/components/SectionListAlternating/SectionListAlternating.module.scss
+++ b/src/components/SectionListAlternating/SectionListAlternating.module.scss
@@ -28,6 +28,7 @@
       grid-column: 1;
       grid-row: 1;
       padding: 0 1rem;
+      margin: auto 0;
     }
     .image {
       grid-column: 2;
